
syntax = "proto3";

package pb;

import "number_msg.proto";

option go_package = "./pb";

service ArithmeticService {
    rpc GetAddition(OperationParameters) returns (OperationResponse) {}
    rpc GetSubtraction(OperationParameters) returns (OperationResponse) {}
    rpc GetMultiplication(OperationParameters) returns (OperationResponse) {}
    rpc GetDivision(OperationParameters) returns (OperationResponse) {}
  }
